--- a/app.json
+++ b/app.json
@@ -164,7 +164,7 @@
     },
     "DEFAULT_BIO": {
       "description": "Default Bio Mu.",
-      "value": "Zeinzo-Userbot",
+      "value": "Seth-Userbot",
       "required": false
     },
     "ALIVE_NAME": {
